修改sonar配置脚本